--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "build:typescript": "tsc",
+    "build:parcel": "parcel build",
     "build": "run-s build:typescript",
     "watch": "tsc -w",
     "start": "serve public",
-    "dev": "run-p watch start"
+    "dev:runp": "run-p watch start",
+    "dev": "parcel -p 3000 pages/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,11 +25,19 @@
   "devDependencies": {
     "@types/node": "^17.0.42",
     "@types/three": "^0.141.0",
+    "parcel": "^2.6.2",
+    "parcel-reporter-static-files-copy": "^1.3.4",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "npm-run-all": "^4.1.5",
     "serve": "^13.0.2",
     "three": "^0.141.0"
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**"
   }
 }
